<resources>
    <string name="app_name">Music Link</string>
    <string name="Playlists">Playlists</string>
    <string name="Playlist">Playlist</string>
    <string name="search">Search</string>
    <string name="add">add</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string-array name="navigation">
        <item>Search</item>
        <item>Library</item>
        <item>Profile</item>
        <item>Settings</item>

    </string-array>
    <string name="title_activity_search">SearchActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="enter_name_of_playlist_here">Enter name of playlist here…</string>
    <string name="enter_the_text_here">Enter the text here</string>
    <string name="settings">Settings</string>
    <string name="song_picture">Song Picture</string>
    <string name="song_name">Song name</string>
    <string name="search_for_a_song_here">Search for a song here…</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="enter_your_profile_name_here">Enter your profile name here…</string>
    <string name="enter_your_email_address_here">Enter your email address here…</string>
    <string name="change_name">Change Name</string>
    <string name="change_email">Change Email</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="share_action_text">One of your friends shared a playlist with you through MusicLink!</string>
    <string name="share_action_subject">A friend shared a playlist using MusicLink!</string>
</resources>
