<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listSongView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playlistsLabel"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="#688df4"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/Playlist"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/addPlaylistButton"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:contentDescription="@string/add"
            android:src="@android:drawable/ic_menu_add" />
    </LinearLayout>

    <ListView
        android:id="@+id/listOfSongs"
        android:layout_width="match_parent"
        android:layout_height="379dp"
        android:dividerHeight="1dp"
        android:verticalSpacing="4dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-32dp"
        android:layout_marginEnd="20dp"
        android:src="@android:drawable/ic_menu_share" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:contentDescription="@string/search"
            android:src="@android:drawable/ic_menu_search" />

        <ImageButton
            android:id="@+id/libraryButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:contentDescription="@string/library" />

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:contentDescription="@string/profile" />

        <ImageButton
            android:id="@+id/optionsButton"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:contentDescription="@string/options" />
    </LinearLayout>

</LinearLayout>